[package]
name = "aingle-rkv"
version = "0.1.0"
authors = ["Apilium Technologies <hello@apilium.com>"]
license = "Apache-2.0"
description = "A simple, humane, typed Rust key-value store for AIngle"
documentation = "https://docs.rs/aingle-rkv"
homepage = "https://apilium.com"
repository = "https://github.com/ApiliumCode/rkv"
readme = "README.md"
keywords = ["aingle", "lmdb", "database", "key-value", "storage"]
categories = ["database"]
edition = "2021"
rust-version = "1.89"
exclude = ["/tests/envs/*"]

[features]
default = []
with-asan = ["aingle-lmdb/with-asan"]
with-fuzzer = ["aingle-lmdb/with-fuzzer"]
with-fuzzer-no-link = ["aingle-lmdb/with-fuzzer-no-link"]

[dependencies]
arrayref = "0.3"
bincode = "1.0"
bitflags = "2"
byteorder = "1"
lazy_static = "1.0"
aingle-lmdb = "0.1"
ordered-float = "4"
uuid = "1"
serde = "1.0"
serde_derive = "1.0"
url = "2.0"
thiserror = "1.0"

[dev-dependencies]
byteorder = "1"
tempfile = "3"
